<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="30dp"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        android:textColor="@color/black"
        android:layout_marginTop="200dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="88dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"

            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/black"


            />

        <EditText
            android:id="@+id/add_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:autofillHints="username"
            android:hint="@string/add_username"
            android:inputType="text"
            android:textSize="18sp"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"

            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/black"

            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:hint="@string/edt_password"
            android:inputType="text"
            android:textSize="18sp"

            />


    </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/but_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/but_login"/>


</LinearLayout>